c4-type/base/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4-type-grpc
  labels:
    app: c4-type-grpc
spec:
  ports:
  - name: grpc
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: c4-type-grpc
