c4-type/base/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4-type-http
  labels:
    app: c4-type-http
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: c4-type-http
